@@ -1,7 +1,9 @@
 Changes for Perl extension Text-FindIndent
 
 	- Handle case where hash keys and values are indented by braces pos + 1
-	(CHORNY)
+	  (CHORNY)
+	- Check if indent level is same on next line and slightly increase probability of
+	  current indent type. Should be faster too. (CHORNY)
 
 0.07
 	- ~40% faster since 0.05
